--- a/package.json
+++ b/package.json
@@ -2,11 +2,12 @@
     "name": "lang-mini",
     "main": "lang-mini.js",
     "license": "MIT",
-    "dependencies": {
-        "deep-equal": "^2.0.3"
+    "dependencies": {},
+    "cdeps": {
+        "deep-equal (try older)?": "^2.0.3"
     },
     "devDependencies": {
-        "fnl": "^0.0.14"
+        "fnl": "^0.0.17"
     },
     "comments": [
         "using fnl to run the examples / (tests???) using an observable"
@@ -20,5 +21,5 @@
         "type": "git",
         "url": "https://github.com/metabench/lang-mini.git"
     },
-    "version": "0.0.15"
+    "version": "0.0.21"
 }
