--- a/package.json
+++ b/package.json
@@ -1,16 +1,16 @@
 {
     "name": "lang-mini",
-    "main": "lang-mini.js",
+    "main": "lib-lang-mini.js",
     "license": "MIT",
     "dependencies": {},
     "cdeps": {
         "deep-equal (try older)?": "^2.0.3"
     },
     "devDependencies": {
-        "fnl": "^0.0.21"
+        "fnl": "^0.0.22"
     },
     "comments": [
-        "using fnl to run the examples / (tests???) using an observable"
+        "using fnl to run the examples / (tests???) using an observable. seems OK. normal lang-mini does not depend on fnl."
     ],
     "engines": {
         "node": ">=9.0.0"
@@ -21,5 +21,5 @@
         "type": "git",
         "url": "https://github.com/metabench/lang-mini.git"
     },
-    "version": "0.0.26"
+    "version": "0.0.27"
 }
