--- a/package.json
+++ b/package.json
@@ -2,9 +2,8 @@
     "name": "lang-mini",
     "main": "lib-lang-mini.js",
     "license": "MIT",
-    "dependencies": {},
     "devDependencies": {
-        "fnl": "^0.0.35"
+        "fnl": "^0.0.36"
     },
     "comments": [
         "using fnl to run the examples / (tests???) using an observable. seems OK. normal lang-mini does not depend on fnl."
@@ -18,5 +17,8 @@
         "type": "git",
         "url": "https://github.com/metabench/lang-mini.git"
     },
-    "version": "0.0.39"
+    "version": "0.0.40",
+    "scripts": {
+        "test": "node tests/all-test.js && node tests/new-tests.js"
+    }
 }
