--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
     "main": "lib-lang-mini.js",
     "license": "MIT",
     "devDependencies": {
-        "fnl": "^0.0.36"
+        "fnl": "^0.0.36",
+        "jest": "^29.7.0"
     },
     "comments": [
         "using fnl to run the examples / (tests???) using an observable. seems OK. normal lang-mini does not depend on fnl."
@@ -17,8 +18,10 @@
         "type": "git",
         "url": "https://github.com/metabench/lang-mini.git"
     },
-    "version": "0.0.40",
+    "version": "0.0.41",
     "scripts": {
-        "test": "node tests/all-test.js && node tests/new-tests.js"
+        "test": "jest && node tests/all-test.js && node tests/new-tests.js",
+        "test:jest": "jest",
+        "test:legacy": "node tests/all-test.js && node tests/new-tests.js"
     }
 }
